--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,10 @@ body {
 .boarding-pass {
     margin-top: 5rem;
     margin-inline: auto;
-    width: 20rem;
-    height: 33rem;
+    width: 327px;
     border: 2px solid red;
     display: grid;
-    grid-template-rows: 1fr 80% 1fr;
+    grid-template-rows: 1fr 85% 1fr;
 }
 
 .card-wrapper {
@@ -32,22 +31,26 @@ body {
     grid-template-rows: 1fr 0.7fr 1.5fr;
 }
 
-.flight-info {
+.flight-info{
+    padding: 24px 32px;
     background: #FFFFFF;
-    border-radius: 1.2rem;
+    border-radius: 24px;
     border-bottom: 2px dashed rgba(0, 0, 0, 0.32);
+    display: grid;
+    gap: 24px;
 }
 
 .passenger-info {
+    padding: 24px 32px;
     background: #FFFFFF;
-    border-radius: 1.2rem;
+    border-radius: 24px;
     border-bottom: 2px dashed rgba(0, 0, 0, 0.32);
 
 }
 
 .boarding-info {
     background: #FFFFFF;
-    border-radius: 1.2rem;
+    border-radius: 24px;
 
 }
 
@@ -63,4 +66,22 @@ h2 {
     text-align: center;
     font-size: 1.5rem;
     font-weight: 500;
+}
+
+strong, .black {
+    color: #000000;
+}
+
+.number-date-wrapper, .travel-wrapper, .passenger-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.container-left {
+    display: grid;
+}
+
+.container-right {
+    display: grid;
+    text-align: right;
 }
