--- a/styles.css
+++ b/styles.css
@@ -13,22 +13,21 @@
 body {
     background: linear-gradient(167.96deg, #8257E5 0%, #271A45 100%);
     height: 100vh;
+    width: 100vw;
     font-family: 'Rubik', sans-serif;
     color: rgba(0, 0, 0, 0.64);
 }
 
 .boarding-pass {
-    margin-top: 5rem;
+    margin: 10% 0;
     margin-inline: auto;
     width: 327px;
-    border: 2px solid red;
     display: grid;
     grid-template-rows: 1fr 85% 1fr;
 }
 
 .card-wrapper {
     display: grid;
-    grid-template-rows: 1fr 0.7fr 1.5fr;
 }
 
 .flight-info{
@@ -49,8 +48,11 @@ body {
 }
 
 .boarding-info {
+    padding: 24px 32px;
     background: #FFFFFF;
     border-radius: 24px;
+    display: grid;
+    gap: 24px;
 
 }
 
@@ -59,6 +61,7 @@ body {
     color: #FFFFFF;
     text-align: center;
     opacity: 0.64;
+    padding-inline: 2rem;
 }
 
 h2 {
@@ -72,7 +75,7 @@ strong, .black {
     color: #000000;
 }
 
-.number-date-wrapper, .travel-wrapper, .passenger-wrapper {
+.number-date-wrapper, .travel-wrapper, .passenger-wrapper, .boarding-wrapper {
     display: flex;
     justify-content: space-between;
 }
@@ -84,4 +87,34 @@ strong, .black {
 .container-right {
     display: grid;
     text-align: right;
+}
+
+.one, .two, .three {
+    display: grid;
+    gap: 0;
+}
+
+.center {
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.boarding-wrapper .container-right {
+    text-align: center;
+}
+
+.boarding-wrapper .container-right img {
+    width: 11rem;
+}
+
+.secondary {
+    color: white;
+    font-weight: 500;
+    background-color: #633BBC;
+    width: 54px;
+    height: 27px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
 }
