--- a/styles.css
+++ b/styles.css
@@ -11,64 +11,67 @@
 }
 
 body {
+    font-size: 1.6rem;
     background: linear-gradient(167.96deg, #8257E5 0%, #271A45 100%);
     height: 100vh;
-    width: 100vw;
+
+    letter-spacing: -0.02em;
     font-family: 'Rubik', sans-serif;
     color: rgba(0, 0, 0, 0.64);
+
+    display: grid;
+    place-content: center;
+
 }
 
 .boarding-pass {
-    margin: 10% 0;
-    margin-inline: auto;
-    width: 327px;
-    display: grid;
-    grid-template-rows: 1fr 85% 1fr;
+    margin: auto;
+    max-width: 32.7rem;
 }
 
 .card-wrapper {
+    margin-top: 2rem;
     display: grid;
+}
+
+section {
+    padding: 2.4rem 3.2rem;
+    background: #FFFFFF;
+    border-radius: 2.4rem;
+    display: grid;
+    gap: 2.4rem;
 }
 
 .flight-info{
-    padding: 24px 32px;
-    background: #FFFFFF;
-    border-radius: 24px;
-    border-bottom: 2px dashed rgba(0, 0, 0, 0.32);
-    display: grid;
-    gap: 24px;
+    border-bottom: .2rem dashed rgba(0, 0, 0, 0.32);
 }
 
 .passenger-info {
-    padding: 24px 32px;
-    background: #FFFFFF;
-    border-radius: 24px;
-    border-bottom: 2px dashed rgba(0, 0, 0, 0.32);
+    border-bottom: .2rem dashed rgba(0, 0, 0, 0.32);
 
 }
 
-.boarding-info {
-    padding: 24px 32px;
-    background: #FFFFFF;
-    border-radius: 24px;
-    display: grid;
-    gap: 24px;
-
-}
-
-.boarding-pass p {
+.boarding-pass > p {
     margin-top: 1rem;
     color: #FFFFFF;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
     text-align: center;
     opacity: 0.64;
-    padding-inline: 2rem;
+    width: 27rem;
+    margin: 2rem auto;
+}
+
+h1, h2, strong {
+    font-weight: 500;
 }
 
 h2 {
     color: #FFFFFF;
     text-align: center;
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 2rem;
+    line-height: 2.4rem;
+    
 }
 
 strong, .black {
@@ -86,35 +89,40 @@ strong, .black {
 
 .container-right {
     display: grid;
+    margin-left: auto;
     text-align: right;
 }
 
-.one, .two, .three {
+.boarding-wrapper {
+    align-items: center;
+    gap: .8rem;
+    
+}
+
+
+
+dl {
     display: grid;
-    gap: 0;
+    gap: 1.6rem;
 }
 
 .center {
     text-align: center;
-    font-size: 1.2rem;
 }
 
 .boarding-wrapper .container-right {
-    text-align: center;
-}
-
-.boarding-wrapper .container-right img {
-    width: 11rem;
+    display: grid;
+    justify-items: center;
 }
 
 .secondary {
     color: white;
     font-weight: 500;
     background-color: #633BBC;
-    width: 54px;
-    height: 27px;
+    width: 5.4rem;
+    height: 2.7rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 8px;
+    border-radius: .8rem;
 }
